--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,62 +1,44 @@
 ---
+import { AUTHOR_INFORMATION } from '../consts';
 import Layout from '../layouts/BlogPost.astro';
 ---
 
 <Layout
-	title="About Me"
-	description="Lorem ipsum dolor sit amet"
-	pubDate={new Date('August 08 2021')}
+	title="Sobre Mim"
+	description="Um resumo de quem eu sou e os objetivos desse blog."
+	pubDate={new Date('March 17 2024')}
 	heroImage="/blog-placeholder-about.jpg"
 >
 	<p>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-		labore et dolore magna aliqua. Vitae ultricies leo integer malesuada nunc vel risus commodo
-		viverra. Adipiscing enim eu turpis egestas pretium. Euismod elementum nisi quis eleifend quam
-		adipiscing. In hac habitasse platea dictumst vestibulum. Sagittis purus sit amet volutpat. Netus
-		et malesuada fames ac turpis egestas. Eget magna fermentum iaculis eu non diam phasellus
-		vestibulum lorem. Varius sit amet mattis vulputate enim. Habitasse platea dictumst quisque
-		sagittis. Integer quis auctor elit sed vulputate mi. Dictumst quisque sagittis purus sit amet.
+		Olá, meu nome é Matheus. Sou formado em Engenharia Aeroespacial no pelo Instituto Tecnológico de Aeronáutoca (ITA).
+		Atualmente trabalho com programação e faço mestrado na mesma universidade.
 	</p>
-
 	<p>
-		Morbi tristique senectus et netus. Id semper risus in hendrerit gravida rutrum quisque non
-		tellus. Habitasse platea dictumst quisque sagittis purus sit amet. Tellus molestie nunc non
-		blandit massa. Cursus vitae congue mauris rhoncus. Accumsan tortor posuere ac ut. Fringilla urna
-		porttitor rhoncus dolor. Elit ullamcorper dignissim cras tincidunt lobortis. In cursus turpis
-		massa tincidunt dui ut ornare lectus. Integer feugiat scelerisque varius morbi enim nunc.
-		Bibendum neque egestas congue quisque egestas diam. Cras ornare arcu dui vivamus arcu felis
-		bibendum. Dignissim suspendisse in est ante in nibh mauris. Sed tempus urna et pharetra pharetra
-		massa massa ultricies mi.
+		Meu contato com inglês surgiu desde muito cedo, quando eu estava na Turma ITA, mas
+		mesmo depois que passei no ITA e comecei a desenvolver trabalhos senti muitas dificuldades
+		com o inglês, principalmente durante a conversação.
 	</p>
-
 	<p>
-		Mollis nunc sed id semper risus in. Convallis a cras semper auctor neque. Diam sit amet nisl
-		suscipit. Lacus viverra vitae congue eu consequat ac felis donec. Egestas integer eget aliquet
-		nibh praesent tristique magna sit amet. Eget magna fermentum iaculis eu non diam. In vitae
-		turpis massa sed elementum. Tristique et egestas quis ipsum suspendisse ultrices. Eget lorem
-		dolor sed viverra ipsum. Vel turpis nunc eget lorem dolor sed viverra. Posuere ac ut consequat
-		semper viverra nam. Laoreet suspendisse interdum consectetur libero id faucibus. Diam phasellus
-		vestibulum lorem sed risus ultricies tristique. Rhoncus dolor purus non enim praesent elementum
-		facilisis. Ultrices tincidunt arcu non sodales neque. Tempus egestas sed sed risus pretium quam
-		vulputate. Viverra suspendisse potenti nullam ac tortor vitae purus faucibus ornare. Fringilla
-		urna porttitor rhoncus dolor purus non. Amet dictum sit amet justo donec enim.
+		Passei em tudo durante a universidade, mas ao final do curso,
+		quando veio uma oportunidade internacional para mim, eu não fui capaz de 
+		passar nela por não ter nível de conversação suficiente.
+		O caso interessante é que eu tinha as qualificações técnicas, mas não
+		de conversação, que eu iria usar durante meu dia a dia.
 	</p>
-
 	<p>
-		Mattis ullamcorper velit sed ullamcorper morbi tincidunt. Tortor posuere ac ut consequat semper
-		viverra. Tellus mauris a diam maecenas sed enim ut sem viverra. Venenatis urna cursus eget nunc
-		scelerisque viverra mauris in. Arcu ac tortor dignissim convallis aenean et tortor at. Curabitur
-		gravida arcu ac tortor dignissim convallis aenean et tortor. Egestas tellus rutrum tellus
-		pellentesque eu. Fusce ut placerat orci nulla pellentesque dignissim enim sit amet. Ut enim
-		blandit volutpat maecenas volutpat blandit aliquam etiam. Id donec ultrices tincidunt arcu. Id
-		cursus metus aliquam eleifend mi.
+		Desde então comecei a estudar inglês com mais intensidade para me aperfeiçoar e nunca mais
+		passar por algo assim.
 	</p>
-
 	<p>
-		Tempus quam pellentesque nec nam aliquam sem. Risus at ultrices mi tempus imperdiet. Id porta
-		nibh venenatis cras sed felis eget velit. Ipsum a arcu cursus vitae. Facilisis magna etiam
-		tempor orci eu lobortis elementum. Tincidunt dui ut ornare lectus sit. Quisque non tellus orci
-		ac. Blandit libero volutpat sed cras. Nec tincidunt praesent semper feugiat nibh sed pulvinar
-		proin gravida. Egestas integer eget aliquet nibh praesent tristique magna.
+		Este blog não contém toda a minha jornada, mas minha intenção é torná-lo um meio de estudo
+		para mim e para outras pessoas que queiram estudar da mesma forma que a minha.
+	</p>
+	<p>
+		Pretendo colocar coisas que aprendi, principalmente quando estive conversando em inglês
+		para aperfeiçoar o conteúdo.
+	</p>
+	<p>
+		De qualquer forma, boa leitura e espero que possa te ajudar de alguma forma com meus
+		conteúdos.
 	</p>
 </Layout>
