--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,36 +13,23 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<body>
 		<Header />
 		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
+			<h1>Seja Bem Vindo!</h1>
 			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
+				Bem vindo ao meu site para estudo em inglês. Aqui eu pretendo colocar
+				todos os meus resumos e estudos que acho interessantes sobre inglês.
 			</p>
-			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
-			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
+			<p>Este site pretende conter:</p>
 			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/pages/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
+				<li>Resumo das minhas lissões de inglês.</li>
+				<li>Textos sobre assuntos interessantes em inglês.</li>
+				<li>Atividades em inglês</li>
+				<li>Explicação sobre um tema que estou aprendendo.</li>
 			</ul>
 			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
+				Caso sinta vontade de desenvolver um site semelhante a este, deixo aqui
+				o link para o repositório do projeto contendo instruções para configurar
+				e customizar o projeto como deseje.
+				<a href="#">Repositório English Study</a>
 			</p>
 		</main>
 		<Footer />
