--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -48,6 +48,9 @@ const posts = (await getCollection('blog')).sort(
 			ul li img {
 				margin-bottom: 0.5rem;
 				border-radius: 12px;
+
+				height: 20rem;
+				object-fit: cover;
 			}
 			ul li a {
 				display: block;
